# Partial-Homology

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  forget_main.cpp  graph.hpp  main.cpp  matrix.cpp  matrix.hpp  meta_main.cpp  new_main.cpp  perf_main.cpp  relation_set.cpp  relation_set.hpp  tree.cpp  tree.hpp
src/gen_data/: gen_events.py  gen_yule.py
src/parse/: newick.cpp  newick.hpp  ortho.cpp  ortho.hpp
src/stats/: constructed_tree.trees  org_tree.trees  output.dist  plot_test.tex  report.r  triple_diff.py
src/test/: test_relation_set.cpp
